--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     
                     <header className="p-6 flex justify-between items-center w-full max-w-7xl mx-auto relative z-10">
                         <div>
-                            <img src="logo.jpg" alt="Racer Logo" className="h-16 w-auto object-contain mb-1 fade-in" />
+                            <img src="logo.PNG" alt="Racer Logo" className="h-20 w-auto object-contain mb-1 fade-in" />
                             <div className="flex items-center gap-2">
                                 <p className="text-slate-500 text-xs font-medium uppercase tracking-widest pl-1">ระบบติดตามวันหมดอายุ</p>
                                 {loading && cars.length > 0 && (
@@ -654,3 +654,4 @@
     </script>
 </body>
 </html>
+
